# src/routes/index.js
@@ -1,12 +1,11 @@
 const router = require("express").Router();
 
 router.get("/", async (req, res) => {
-
-  // #swagger.tags = ['Home']
-    console.log(req)
+    // #swagger.tags = ['Home']
     res.status(200).send("This is the home screen!")
   })
 router.use("/books", require("./books"))
+router.use("/bookItems", require("./bookItems"))
 router.use("/authors", require("./authors"))
 router.use("/api-docs", require("./apiDocs"))
 
